syntax = "proto3";
package dreddsecure.escrow;

option go_package = "dredd-secure/x/escrow/types";

message Escrow {
  uint64 id = 1;
  string status = 2; 
  string initiator = 3; 
  string fulfiller = 4; 
  string initiatorCoin = 5;
  string fulfillerCoin = 6;
  string startDate = 7; 
  string endDate = 8; 
  
}
